--- a/OnlineFixStore/index.html
+++ b/OnlineFixStore/index.html
@@ -68,10 +68,19 @@
                 loadGames();
 
                 // Load home content
-                fetch('/home.txt')
-                    .then(res => res.text())
+                fetch('/Home.txt')
+                    .then(res => {
+                        if (!res.ok) throw new Error('File not found');
+                        return res.text();
+                    })
                     .then(text => setHomeContent(text))
-                    .catch(() => setHomeContent('Welcome to Game Fix Store!\n\nYour one-stop destination for game fixes and updates.'));
+                    .catch(() => {
+                        // Try lowercase if uppercase fails
+                        fetch('/home.txt')
+                            .then(res => res.text())
+                            .then(text => setHomeContent(text))
+                            .catch(() => setHomeContent('Welcome to Online Fix Store!\n\nYour one-stop destination for game fixes and updates.'));
+                    });
             }, []);
 
             const fetchGameData = async (appID) => {
@@ -271,7 +280,7 @@
                     {/* Left Sidebar Menu - Fixed */}
                     <div className="w-64 bg-gray-800 border-r border-gray-700 fixed h-full overflow-y-auto">
                         <div className="p-6">
-                            <h1 className="text-2xl font-bold mb-8 text-blue-400">Game Fix Store</h1>
+                            <h1 className="text-2xl font-bold mb-8 text-blue-400">Online Fix Store</h1>
                             
                             <nav className="space-y-2">
                                 <button
@@ -311,8 +320,12 @@
                             <div className="p-8 max-w-4xl mx-auto">
                                 <div className="bg-gray-800 rounded-lg p-8 shadow-xl">
                                     <h2 className="text-4xl font-bold mb-6">Welcome</h2>
-                                    <div className="text-gray-300 leading-relaxed whitespace-pre-wrap">
-                                        {homeContent}
+                                    <div className="text-gray-300 leading-relaxed">
+                                        {homeContent.split('\n').map((line, idx) => (
+                                            <p key={idx} className={line.trim() === '' ? 'h-4' : 'mb-2'}>
+                                                {line}
+                                            </p>
+                                        ))}
                                     </div>
                                 </div>
                             </div>
@@ -325,10 +338,41 @@
                                     <h2 className="text-4xl font-bold mb-6">Contact Us</h2>
                                     <div className="text-gray-300 leading-relaxed space-y-4">
                                         <p>Get in touch with us for support, questions, or feedback.</p>
-                                        <div className="space-y-2">
-                                            <p><strong>Email:</strong> your-email@example.com</p>
-                                            <p><strong>Discord:</strong> YourDiscord#0000</p>
-                                            <p><strong>GitHub:</strong> github.com/{GITHUB_USERNAME}</p>
+                                        <div className="space-y-4">
+                                            <div className="flex items-start gap-3 p-3 bg-gray-700 rounded">
+                                                <Mail />
+                                                <div>
+                                                    <p className="font-semibold text-white">Email</p>
+                                                    <a href="mailto:fixitf759@gmail.com" className="text-blue-400 hover:text-blue-300 break-all">
+                                                        fixitf759@gmail.com
+                                                    </a>
+                                                </div>
+                                            </div>
+                                            <div className="flex items-start gap-3 p-3 bg-gray-700 rounded">
+                                                <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" className="mt-1">
+                                                    <path d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419c0-1.333.956-2.419 2.157-2.419c1.21 0 2.176 1.096 2.157 2.42c0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419c0-1.333.955-2.419 2.157-2.419c1.21 0 2.176 1.096 2.157 2.42c0 1.333-.946 2.418-2.157 2.418z"/>
+                                                </svg>
+                                                <div>
+                                                    <p className="font-semibold text-white">Discord</p>
+                                                    <p className="text-blue-400">lindong6631</p>
+                                                </div>
+                                            </div>
+                                            <div className="flex items-start gap-3 p-3 bg-gray-700 rounded">
+                                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className="mt-1">
+                                                    <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/>
+                                                </svg>
+                                                <div>
+                                                    <p className="font-semibold text-white">GitHub Issues</p>
+                                                    <a href="https://github.com/ShayneVi/OnlineFixStore/issues" target="_blank" rel="noopener noreferrer" className="text-blue-400 hover:text-blue-300 break-all">
+                                                        Report an Issue
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div className="mt-6 p-4 bg-gray-700 rounded-lg">
+                                            <p className="text-sm text-gray-300">
+                                                For game fix requests, issues with downloads, or general questions, please use the GitHub Issues page or send an email.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -339,7 +383,7 @@
                         {currentView === 'store' && !selectedGame && (
                             <div className="flex">
                                 <div className="flex-1 p-6">
-                                    <h1 className="text-4xl font-bold mb-6">Game Store</h1>
+                                    <h1 className="text-4xl font-bold mb-6">Online Fix Store</h1>
 
                                     <div className="mb-8">
                                         <input
