--- a/OnlineFixStore/index.html
+++ b/OnlineFixStore/index.html
@@ -562,7 +562,7 @@
                                 </div>
 
                                 <div className="w-72 bg-gray-800 border-l border-gray-700 p-6 overflow-y-auto" style={{ maxHeight: '100vh', paddingBottom: '2rem' }}>
-                                    <details className="mb-6" open>
+                                    <details className="mb-6">
                                         <summary className="text-xl font-bold mb-4 cursor-pointer hover:text-blue-400 transition">
                                             Browse by Tags
                                         </summary>
