--- a/OnlineFixStore/index.html
+++ b/OnlineFixStore/index.html
@@ -63,7 +63,7 @@
             const [loading, setLoading] = useState(true);
             const [steamLoading, setSteamLoading] = useState(false);
             const [searchQuery, setSearchQuery] = useState('');
-            const [currentView, setCurrentView] = useState('store');
+            const [currentView, setCurrentView] = useState('home');
             const [homeContent, setHomeContent] = useState('');
             const [selectedTag, setSelectedTag] = useState(null);
             const [allTags, setAllTags] = useState([]);
